<resources>
    <string name="app_name">CS3270A3 Smith</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="by_author">By Harrison Smith</string>
    <string name="game_name">Rock, Paper, Scissors</string>
    <string name="my_pick">My Pick</string>
    <string name="TieGames">Tie Games</string>
    <string name="games_played">Games Played</string>
    <string name="winner" />
    <string name="rock">Rock</string>
    <string name="reset_count">Reset Count</string>
    <string name="scissors">Scissor</string>
    <string name="paper">Paper</string>
    <string name="tiegame_score">0</string>
    <string name="mywin_score">0</string>
    <string name="phone_pick_is">Phone Pick is</string>
    <string name="phone_pick_answer">\?</string>
    <string name="my_win_count">My Win Count</string>
    <string name="phone_win_count">Phone Win Count</string>
    <string name="gameplayed_score">0</string>
    <string name="phone_win_score">0</string>
</resources>